# pointnet-hrc-ai

./: .gitignore  CMakeLists.txt  bin_to_h5.py  checking_np_format.py  h5_dataset.py  main.cpp  pointnet_inference.cpp  pointnet_inference.h  requirements.txt  train.py  txt_to_h5.py  validation.py  visualise.py
model/: pointnet.py  pointnet3d.py  pointnet9d.py
src/model/: __init__.py  model.py
src/utils/: convert_model_to_torchscript.py  extract_files.py  train.py  validation.py
